delete pagination and year fetch